# onsenlib

./: .gitmodules  CMakeLists.txt  Makefile  README.md  gon.json  lint.sh
.github/workflows/: lint.yaml  test_and_release.yaml
assets/presets/: Default.oapreset
assets/presets/Factory/Bass/: Bass0.oapreset  Bass1.oapreset  Bass2.oapreset  Bass3.oapreset
assets/presets/Factory/FX/: FX0.oapreset  FX1.oapreset  FX2.oapreset  FX3.oapreset
assets/presets/Factory/Key/: Key0.oapreset  Key1.oapreset  Key2.oapreset  Key3.oapreset
assets/presets/Factory/Pad/: Pad0.oapreset  Pad1.oapreset  Pad2.oapreset  Pad3.oapreset
benchmark/: CMakeLists.txt  Main.cpp
distro/Linux/: readme.txt
distro/Windows/: OnsenlibSynth.iss
distro/macOS/: OnsenlibSynth.pkgproj
src/: CMakeLists.txt  IAudioProcessorState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/adapters/: JucePositionInfo.h  JuceRompler.h
src/dsp/: Chorus.cpp  Chorus.h  Filter.h  Hpf.h  Oscillator.h  Rompler.h
src/jsui/src/: Menu.tsx
src/params/: ChorusParams.h  ChorusParamsMock.h  FilterParams.h  FilterParamsMock.h  HpfParams.h  HpfParamsMock.h  OscillatorParams.h  OscillatorParamsMock.h
src/services/: Logger.h  PresetManager.cpp  TmpFileManager.h
src/synth/: ISynthUi.h  SynthEngine.cpp  SynthEngine.h  SynthParams.h  SynthUi.h  SynthVoice.cpp  SynthVoice.h
src/views/: GlobalLookAndFeel.h  PresetManagerView.h
tests/: CMakeLists.txt
tests/dsp/: ChorusTest.cpp  FilterTest.cpp  HpfTest.cpp  OscillatorTest.cpp
tests/services/: AudioProcessorStateMock.h  PresetManagerTest.cpp  PresetsForTest.h  TmpFileManagerTest.cpp
